Add missing module

--- a/Notebooks/1_FAST-EM_import.ipynb
+++ b/Notebooks/1_FAST-EM_import.ipynb
@@ -225,7 +225,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "72a370058c444efda7d68274d5a5b0e0",
+       "model_id": "df0464fe21bd4183a288026d1dcdd011",
        "version_major": 2,
        "version_minor": 0
       },
@@ -237,15 +237,36 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mipmaps for EPON_80nm_s001 already exist, skipping to next section\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0c6494974841442fb79c23d8058b9a3b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/121 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "ename": "NameError",
-     "evalue": "name 'dir_project' is not defined",
+     "evalue": "name 'TiffFile' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [7]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Generate mipmaps from 'raw' stack for every section\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mgenerate_mipmaps_from_sections\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdir_sections\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[43m                               \u001b[49m\u001b[43mstack_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mraw\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniconda3/envs/fastem/lib/python3.9/site-packages/fastemworkflow/importdata.py:52\u001b[0m, in \u001b[0;36mgenerate_mipmaps_from_sections\u001b[0;34m(dir_sections, stack_name)\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[38;5;66;03m# Loop through section directories\u001b[39;00m\n\u001b[1;32m     47\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m z, dir_section \u001b[38;5;129;01min\u001b[39;00m tqdm(\u001b[38;5;28menumerate\u001b[39m(dir_sections),\n\u001b[1;32m     48\u001b[0m                        total\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mlen\u001b[39m(dir_sections)):\n\u001b[1;32m     49\u001b[0m     \n\u001b[1;32m     50\u001b[0m     \u001b[38;5;66;03m# Check if MipMaps have already been generated\u001b[39;00m\n\u001b[1;32m     51\u001b[0m     \u001b[38;5;66;03m# List output dirs and all files for processing\u001b[39;00m\n\u001b[0;32m---> 52\u001b[0m     dir_output \u001b[38;5;241m=\u001b[39m \u001b[43mdir_project\u001b[49m \u001b[38;5;241m/\u001b[39m stack_name \u001b[38;5;241m/\u001b[39m dir_section\u001b[38;5;241m.\u001b[39mname\n\u001b[1;32m     53\u001b[0m     output_dirs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(os\u001b[38;5;241m.\u001b[39mlistdir(dir_output))\n\u001b[1;32m     54\u001b[0m     files \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(dir_section\u001b[38;5;241m.\u001b[39mglob(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m[0-9]*_[0-9]*_0.tiff\u001b[39m\u001b[38;5;124m'\u001b[39m)) \u001b[38;5;66;03m# List all files\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'dir_project' is not defined"
+      "Input \u001b[0;32mIn [7]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Generate mipmaps from 'raw' stack for every section\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mgenerate_mipmaps_from_sections\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdir_project\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[43m                               \u001b[49m\u001b[43mdir_sections\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[43m                               \u001b[49m\u001b[43mstack_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mraw\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/miniconda3/envs/fastem/lib/python3.9/site-packages/fastemworkflow/importdata.py:75\u001b[0m, in \u001b[0;36mgenerate_mipmaps_from_sections\u001b[0;34m(dir_project, dir_sections, stack_name)\u001b[0m\n\u001b[1;32m     71\u001b[0m \u001b[38;5;66;03m# Loop through tiffs to process in each section\u001b[39;00m\n\u001b[1;32m     72\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m fp \u001b[38;5;129;01min\u001b[39;00m tqdm(\u001b[38;5;28mlist\u001b[39m(dir_section\u001b[38;5;241m.\u001b[39mglob(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m[0-9]*_[0-9]*_0.tiff\u001b[39m\u001b[38;5;124m'\u001b[39m))):\n\u001b[1;32m     73\u001b[0m     \n\u001b[1;32m     74\u001b[0m     \u001b[38;5;66;03m# Read tiff\u001b[39;00m\n\u001b[0;32m---> 75\u001b[0m     tiff \u001b[38;5;241m=\u001b[39m \u001b[43mTiffFile\u001b[49m(fp)\n\u001b[1;32m     76\u001b[0m     \u001b[38;5;66;03m# Extract metadata\u001b[39;00m\n\u001b[1;32m     77\u001b[0m     metadata \u001b[38;5;241m=\u001b[39m {tag\u001b[38;5;241m.\u001b[39mname: tag\u001b[38;5;241m.\u001b[39mvalue \u001b[38;5;28;01mfor\u001b[39;00m tag \u001b[38;5;129;01min\u001b[39;00m tiff\u001b[38;5;241m.\u001b[39mpages[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mtags}\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'TiffFile' is not defined"
      ]
     }
    ],
