Clean up notebook

--- a/Notebooks/4_FAST-EM-export.ipynb
+++ b/Notebooks/4_FAST-EM-export.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,13 +73,13 @@
        "{'host': 'http://sonic.tnw.tudelft.nl',\n",
        " 'port': 8080,\n",
        " 'owner': 'akievits',\n",
-       " 'project': '20220601_UMCU',\n",
+       " 'project': '20220610_UMCU',\n",
        " 'client_scripts': '/home/catmaid/render/render-ws-java-client/src/main/scripts',\n",
        " 'client_script': '/home/catmaid/render/render-ws-java-client/src/main/scripts/run_ws_client.sh',\n",
        " 'memGB': '2G'}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +88,7 @@
     "# `render` project parameters\n",
     "# ---------------------------\n",
     "owner = 'akievits'\n",
-    "project = '20220601_UMCU'\n",
+    "project = '20220610_UMCU'\n",
     "dir_project = Path(f'/long_term_storage/{owner}/FAST-EM/{project}/')\n",
     "dir_catmaid = Path(f'/long_term_storage/{owner}/CATMAID/projects/{project}/')\n",
     "\n",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -171,12 +171,12 @@
        "      <td>0.0</td>\n",
        "      <td>6400.0</td>\n",
        "      <td>6400.0</td>\n",
-       "      <td>28120.0</td>\n",
-       "      <td>35585.0</td>\n",
+       "      <td>29950.0</td>\n",
+       "      <td>35620.0</td>\n",
        "      <td>[0, 1, 2, 3...</td>\n",
-       "      <td>[M=[[1.0000...</td>\n",
+       "      <td>[M=[[0.9883...</td>\n",
        "      <td>corrected_m...</td>\n",
-       "      <td>HM20_s001</td>\n",
+       "      <td>EPON_80nm_s001</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -186,12 +186,12 @@
        "      <td>0.0</td>\n",
        "      <td>6400.0</td>\n",
        "      <td>6400.0</td>\n",
-       "      <td>28120.0</td>\n",
-       "      <td>35585.0</td>\n",
+       "      <td>29950.0</td>\n",
+       "      <td>35620.0</td>\n",
        "      <td>[0, 1, 2, 3...</td>\n",
-       "      <td>[M=[[1.0000...</td>\n",
+       "      <td>[M=[[0.9867...</td>\n",
        "      <td>corrected_m...</td>\n",
-       "      <td>HM20_s001</td>\n",
+       "      <td>EPON_80nm_s001</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -201,12 +201,12 @@
        "      <td>0.0</td>\n",
        "      <td>6400.0</td>\n",
        "      <td>6400.0</td>\n",
-       "      <td>28120.0</td>\n",
-       "      <td>35585.0</td>\n",
+       "      <td>29950.0</td>\n",
+       "      <td>35620.0</td>\n",
        "      <td>[0, 1, 2, 3...</td>\n",
-       "      <td>[M=[[1.0000...</td>\n",
+       "      <td>[M=[[0.9863...</td>\n",
        "      <td>corrected_m...</td>\n",
-       "      <td>HM20_s001</td>\n",
+       "      <td>EPON_80nm_s001</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -216,12 +216,12 @@
        "      <td>0.0</td>\n",
        "      <td>6400.0</td>\n",
        "      <td>6400.0</td>\n",
-       "      <td>28120.0</td>\n",
-       "      <td>35585.0</td>\n",
+       "      <td>29950.0</td>\n",
+       "      <td>35620.0</td>\n",
        "      <td>[0, 1, 2, 3...</td>\n",
-       "      <td>[M=[[1.0000...</td>\n",
+       "      <td>[M=[[0.9844...</td>\n",
        "      <td>corrected_m...</td>\n",
-       "      <td>HM20_s001</td>\n",
+       "      <td>EPON_80nm_s001</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
@@ -231,12 +231,12 @@
        "      <td>0.0</td>\n",
        "      <td>6400.0</td>\n",
        "      <td>6400.0</td>\n",
-       "      <td>28120.0</td>\n",
-       "      <td>35585.0</td>\n",
+       "      <td>29950.0</td>\n",
+       "      <td>35620.0</td>\n",
        "      <td>[0, 1, 2, 3...</td>\n",
-       "      <td>[M=[[1.0000...</td>\n",
+       "      <td>[M=[[0.9842...</td>\n",
        "      <td>corrected_m...</td>\n",
-       "      <td>HM20_s001</td>\n",
+       "      <td>EPON_80nm_s001</td>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
@@ -247,30 +247,30 @@
       "text/plain": [
        "                           tileId    z   width  height   minint   maxint  \\\n",
        "stack                                                                      \n",
-       "corrected_mo... 0  cor-S000-00...  0.0  6400.0  6400.0  28120.0  35585.0   \n",
-       "                1  cor-S000-00...  0.0  6400.0  6400.0  28120.0  35585.0   \n",
-       "                2  cor-S000-00...  0.0  6400.0  6400.0  28120.0  35585.0   \n",
-       "                3  cor-S000-00...  0.0  6400.0  6400.0  28120.0  35585.0   \n",
-       "                4  cor-S000-00...  0.0  6400.0  6400.0  28120.0  35585.0   \n",
+       "corrected_mo... 0  cor-S000-00...  0.0  6400.0  6400.0  29950.0  35620.0   \n",
+       "                1  cor-S000-00...  0.0  6400.0  6400.0  29950.0  35620.0   \n",
+       "                2  cor-S000-00...  0.0  6400.0  6400.0  29950.0  35620.0   \n",
+       "                3  cor-S000-00...  0.0  6400.0  6400.0  29950.0  35620.0   \n",
+       "                4  cor-S000-00...  0.0  6400.0  6400.0  29950.0  35620.0   \n",
        "\n",
-       "                     imagePyramid          tforms           stack  sectionId  \\\n",
-       "stack                                                                          \n",
-       "corrected_mo... 0  [0, 1, 2, 3...  [M=[[1.0000...  corrected_m...  HM20_s001   \n",
-       "                1  [0, 1, 2, 3...  [M=[[1.0000...  corrected_m...  HM20_s001   \n",
-       "                2  [0, 1, 2, 3...  [M=[[1.0000...  corrected_m...  HM20_s001   \n",
-       "                3  [0, 1, 2, 3...  [M=[[1.0000...  corrected_m...  HM20_s001   \n",
-       "                4  [0, 1, 2, 3...  [M=[[1.0000...  corrected_m...  HM20_s001   \n",
+       "                     imagePyramid          tforms           stack  \\\n",
+       "stack                                                               \n",
+       "corrected_mo... 0  [0, 1, 2, 3...  [M=[[0.9883...  corrected_m...   \n",
+       "                1  [0, 1, 2, 3...  [M=[[0.9867...  corrected_m...   \n",
+       "                2  [0, 1, 2, 3...  [M=[[0.9863...  corrected_m...   \n",
+       "                3  [0, 1, 2, 3...  [M=[[0.9844...  corrected_m...   \n",
+       "                4  [0, 1, 2, 3...  [M=[[0.9842...  corrected_m...   \n",
        "\n",
-       "                   imageRow  imageCol  \n",
-       "stack                                  \n",
-       "corrected_mo... 0         0         0  \n",
-       "                1         0         1  \n",
-       "                2         0         2  \n",
-       "                3         0         3  \n",
-       "                4         0         4  "
+       "                        sectionId  imageRow  imageCol  \n",
+       "stack                                                  \n",
+       "corrected_mo... 0  EPON_80nm_s001         0         0  \n",
+       "                1  EPON_80nm_s001         0         1  \n",
+       "                2  EPON_80nm_s001         0         2  \n",
+       "                3  EPON_80nm_s001         0         3  \n",
+       "                4  EPON_80nm_s001         0         4  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,6 @@
     "# ----------------------------\n",
     "stacks = renderapi.render.get_stacks_by_owner_project(render=render)\n",
     "stacks_EM = [stack for stack in stacks]\n",
-    "stacks_FM = []\n",
     "stacks_2_export = [\n",
     "    'corrected_montaged'\n",
     "]\n",
@@ -317,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,14 +375,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3271929/4004888492.py:38: DeprecationWarning: Sampling from a set deprecated\n",
+      "/tmp/ipykernel_1342971/4004888492.py:38: DeprecationWarning: Sampling from a set deprecated\n",
       "since Python 3.9 and will be removed in a subsequent version.\n",
       "  stack = sample(export_data.keys(), 1)[0]\n"
      ]
@@ -402,16 +401,16 @@
        " '--format',\n",
        " 'png',\n",
        " '--maxLevel',\n",
-       " '7',\n",
+       " '6',\n",
        " '--baseDataUrl',\n",
        " 'http://sonic.tnw.tudelft.nl:8080/render-ws/v1',\n",
        " '--owner',\n",
        " 'akievits',\n",
        " '--project',\n",
-       " '20220601_UMCU']"
+       " '20220610_UMCU']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,13 +567,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "68daf902537a401cadfbdfea92ba51f1",
+       "model_id": "793f73d4d7204e42afcfd6481c6fd472",
        "version_major": 2,
        "version_minor": 0
       },
@@ -699,15 +698,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from icatapi.utils import colorize, T_HOECHST, T_AF594"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [
@@ -727,18 +717,6 @@
     }
    ],
    "source": [
-    "# Colorize settings\n",
-    "d_colorize = {\n",
-    "    'exc_405nm_T': [[0.2, 0.0, 0.0, 0.0],\n",
-    "                    [0.0, 0.2, 0.0, 0.0],\n",
-    "                    [0.0, 0.0, 1.0, 0.0],\n",
-    "                    [0.0, 0.0, 0.0, 1.0]],\n",
-    "    'exc_555nm_T': [[1.0, 0.0, 0.0, 0.0],\n",
-    "                    [0.0, 0.6, 0.0, 0.0],\n",
-    "                    [0.0, 0.0, 0.0, 0.0],\n",
-    "                    [0.0, 0.0, 0.0, 1.0]],\n",
-    "}\n",
-    "\n",
     "# Loop through stacks to export\n",
     "for stack in tqdm(stacks_2_export):\n",
     "\n",
@@ -756,12 +734,11 @@
     "        width_ds = bounds['maxX'] - bounds['minX']  # width of dataset at zoom level 0\n",
     "        width_rs = (192 / (width_ds/2**zoom)) * w_tile\n",
     "        image_rs = transform.resize(image, output_shape=(width_rs, width_rs))\n",
+    "        \n",
     "        # Crop to content\n",
     "        thumb = image_rs[np.ix_((image_rs > 0).any(1), (image_rs > 0).any(0))]\n",
     "        thumb_rs = transform.resize(thumb, output_shape=(192, 192))\n",
-    "        # Colorize\n",
-    "        if stack in stacks_FM:\n",
-    "            thumb_rs = colorize(thumb_rs, d_colorize[stack])\n",
+    "        \n",
     "        # Save\n",
     "        fp_thumb = dir_catmaid / f\"{stack}/{z:.0f}/small.{fmt}\"\n",
     "        io.imsave(fp_thumb, img_as_ubyte(thumb_rs))"
@@ -906,7 +883,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
