Catch exception in import

--- a/Notebooks/1_FAST-EM_import.ipynb
+++ b/Notebooks/1_FAST-EM_import.ipynb
@@ -225,7 +225,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ac26324f0704f319157c9335c23691c",
+       "model_id": "71fa861dd6b448d4a997be033d2c9043",
        "version_major": 2,
        "version_minor": 0
       },
@@ -240,36 +240,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mipmaps for EPON_80nm_s001 already exist, skipping to next section\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a9ea1ce4939e4f5b87fc9197ec0b022b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/121 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [7]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Generate mipmaps from 'raw' stack for every section\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mgenerate_mipmaps_from_sections\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdir_project\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[43m                               \u001b[49m\u001b[43mdir_sections\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[43m                               \u001b[49m\u001b[43mstack_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mraw\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniconda3/envs/fastem/lib/python3.9/site-packages/fastemworkflow/importdata.py:85\u001b[0m, in \u001b[0;36mgenerate_mipmaps_from_sections\u001b[0;34m(dir_project, dir_sections, stack_name)\u001b[0m\n\u001b[1;32m     83\u001b[0m dir_mipmaps\u001b[38;5;241m.\u001b[39mmkdir(parents\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, exist_ok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m     84\u001b[0m \u001b[38;5;66;03m# Create mipmaps\u001b[39;00m\n\u001b[0;32m---> 85\u001b[0m \u001b[43mcreate_mipmaps\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtiff\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdir_mipmaps\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmetadata\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniconda3/envs/fastem/lib/python3.9/site-packages/fastemworkflow/importdata.py:25\u001b[0m, in \u001b[0;36mcreate_mipmaps\u001b[0;34m(tiff, dir_out, metadata)\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;66;03m# Unpack pages\u001b[39;00m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, page \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(tiff\u001b[38;5;241m.\u001b[39mpages):\n\u001b[1;32m     24\u001b[0m     \u001b[38;5;66;03m# Grayscale uint16 image\u001b[39;00m\n\u001b[0;32m---> 25\u001b[0m     image \u001b[38;5;241m=\u001b[39m \u001b[43mpage\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43masarray\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     26\u001b[0m     \u001b[38;5;66;03m# Write tiff\u001b[39;00m\n\u001b[1;32m     27\u001b[0m     fp \u001b[38;5;241m=\u001b[39m dir_out \u001b[38;5;241m/\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.tif\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "File \u001b[0;32m~/miniconda3/envs/fastem/lib/python3.9/site-packages/tifffile/tifffile.py:7593\u001b[0m, in \u001b[0;36mTiffPage.asarray\u001b[0;34m(self, out, squeeze, lock, maxworkers)\u001b[0m\n\u001b[1;32m   7591\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m lock:\n\u001b[1;32m   7592\u001b[0m     fh\u001b[38;5;241m.\u001b[39mseek(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataoffsets[\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m-> 7593\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[43mfh\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_array\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   7594\u001b[0m \u001b[43m        \u001b[49m\u001b[43mkeyframe\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mparent\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbyteorder\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mkeyframe\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_dtype\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mchar\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   7595\u001b[0m \u001b[43m        \u001b[49m\u001b[43mproduct\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkeyframe\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshaped\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   7596\u001b[0m \u001b[43m        \u001b[49m\u001b[43mout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mout\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   7597\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   7598\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m keyframe\u001b[38;5;241m.\u001b[39mfillorder \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m2\u001b[39m:\n\u001b[1;32m   7599\u001b[0m     result \u001b[38;5;241m=\u001b[39m imagecodecs\u001b[38;5;241m.\u001b[39mbitorder_decode(\n\u001b[1;32m   7600\u001b[0m         result, out\u001b[38;5;241m=\u001b[39mresult\n\u001b[1;32m   7601\u001b[0m     )  \u001b[38;5;66;03m# type: ignore\u001b[39;00m\n",
-      "File \u001b[0;32m~/miniconda3/envs/fastem/lib/python3.9/site-packages/tifffile/tifffile.py:12000\u001b[0m, in \u001b[0;36mFileHandle.read_array\u001b[0;34m(self, dtype, count, out)\u001b[0m\n\u001b[1;32m  11998\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_fh \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m  11999\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m> 12000\u001b[0m     n \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_fh\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreadinto\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresult\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# type: ignore\u001b[39;00m\n\u001b[1;32m  12001\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m:\n\u001b[1;32m  12002\u001b[0m     result[:] \u001b[38;5;241m=\u001b[39m numpy\u001b[38;5;241m.\u001b[39mfrombuffer(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_fh\u001b[38;5;241m.\u001b[39mread(nbytes), dtype)\u001b[38;5;241m.\u001b[39mreshape(\n\u001b[1;32m  12003\u001b[0m         result\u001b[38;5;241m.\u001b[39mshape\n\u001b[1;32m  12004\u001b[0m     )\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Mipmaps for EPON_80nm_s001 already exist, skipping to next section\n",
+      "Mipmaps for EPON_80nm_s002 already exist, skipping to next section\n"
      ]
     }
    ],
@@ -297,7 +269,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6decf7416f1b4b05938b8d46683ac8ba",
+       "model_id": "3f96b1bed0314839a780bb6923691c0b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -309,32 +281,12 @@
      "output_type": "display_data"
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "11a8e8759cf949b19e5a7ce1944dd309",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/121 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01074b2c44184374803bebc7e677d6a3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/121 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mipmaps for EPON_80nm_s001 already exist, skipping to next section\n",
+      "Mipmaps for EPON_80nm_s002 already exist, skipping to next section\n"
+     ]
     }
    ],
    "source": [
