--- a/Notebooks/1_FAST-EM_import.ipynb
+++ b/Notebooks/1_FAST-EM_import.ipynb
@@ -297,6 +297,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04c2cd39-4b35-4243-a598-cce942bb746e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find section directories\n",
+    "stack_dir = dir_project / 'corrected' # take arbitrary stack dir\n",
+    "dir_sections_processed = sorted([dir_ for dir_ in stack_dir.iterdir() if dir_.is_dir()])\n",
+    "d_sections = {i: d.name for i, d in enumerate(dir_sections_processed)}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4f45ddd7-554a-40f1-bf4b-a2317a432ba0",
    "metadata": {},
