--- a/Notebooks/3_FAST-EM-align.ipynb
+++ b/Notebooks/3_FAST-EM-align.ipynb
@@ -107,12 +107,12 @@
     "# Create a renderapi.connect.Render object\n",
     "# ----------------------------------------\n",
     "render_connect_params = {\n",
-    "    'host': 'sonic.tnw.tudelft.nl',\n",
-    "    'port': 8080,\n",
+    "    'host': 'localhost',\n",
+    "    'port': 8081,\n",
     "    'owner': owner,\n",
     "    'project': project,\n",
     "    'client_scripts': '/home/catmaid/render/render-ws-java-client/src/main/scripts',\n",
-    "    'memGB': '2G'\n",
+    "    'memGB': '2G',\n",
     "}\n",
     "render = renderapi.connect(**render_connect_params)\n",
     "render.make_kwargs()"
@@ -2827,7 +2827,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
