--- a/Notebooks/export_clemnet_predictions.ipynb
+++ b/Notebooks/export_clemnet_predictions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# FAST-EM Export\n",
+    "# iCAT Export\n",
     "---\n",
     "\n",
     "#### Overview\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,35 +95,15 @@
     "# Create a renderapi.connect.Render object\n",
     "# ----------------------------------------\n",
     "render_connect_params = {\n",
-    "    'host': 'localhost',\n",
-    "    'port': 8081,\n",
+    "    'host': 'sonic.tnw.tudelft.nl',\n",
+    "    'port': 8080,\n",
     "    'owner': owner,\n",
     "    'project': project,\n",
     "    'client_scripts': '/home/catmaid/render/render-ws-java-client/src/main/scripts',\n",
-    "    'memGB': '2G',\n",
+    "    'memGB': '2G'\n",
     "}\n",
     "render = renderapi.connect(**render_connect_params)\n",
     "render.make_kwargs()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('/long_term_storage/akievits/FAST-EM/prototype_rat_pancreas')"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dir_project"
    ]
   },
   {
@@ -305,7 +285,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3783121/4004888492.py:38: DeprecationWarning: Sampling from a set deprecated\n",
+      "/tmp/ipykernel_4051247/4004888492.py:38: DeprecationWarning: Sampling from a set deprecated\n",
       "since Python 3.9 and will be removed in a subsequent version.\n",
       "  stack = sample(export_data.keys(), 1)[0]\n"
      ]
@@ -496,7 +476,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83774d4c4375458b804a5e37ee283d72",
+       "model_id": "7a5c4f30026c424ebf57c555d594c105",
        "version_major": 2,
        "version_minor": 0
       },
@@ -510,7 +490,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "32b18d5e8da448b4ba8f2c45574246ab",
+       "model_id": "f2c8319d881e437e8c62c29f48d0d809",
        "version_major": 2,
        "version_minor": 0
       },
@@ -571,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,13 +561,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "693dd2db97114fb7a04616d80817c491",
+       "model_id": "19789f49e26c49609936e3418844f979",
        "version_major": 2,
        "version_minor": 0
       },
@@ -631,13 +611,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4778d61b9f3c445691b78eb449bbd8f6",
+       "model_id": "ced42e3e4f3748d69ad9a9ef24154b15",
        "version_major": 2,
        "version_minor": 0
       },
@@ -651,7 +631,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e2cece74f6574a68a53d76edf57f30a1",
+       "model_id": "7d92f69cbffb4dddb50cf4d7b8de3cba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -702,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,13 +696,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d7f5299e3464d2d838be3d9da9db138",
+       "model_id": "8fb6e1298ae4483080dd8babab4a3cb0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -792,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
