--- a/Notebooks/1_FAST-EM_import.ipynb
+++ b/Notebooks/1_FAST-EM_import.ipynb
@@ -107,8 +107,8 @@
     "\n",
     "# Create a renderapi.connect.Render object\n",
     "render_connect_params = {\n",
-    "    'host': 'sonic.tnw.tudelft.nl',\n",
-    "    'port': 8080,\n",
+    "    'host': 'localhost',\n",
+    "    'port': 8081,\n",
     "    'owner': owner,\n",
     "    'project': project,\n",
     "    'client_scripts': '/home/catmaid/render/render-ws-java-client/src/main/scripts',\n",
