--- a/Notebooks/2_FAST-EM-montage.ipynb
+++ b/Notebooks/2_FAST-EM-montage.ipynb
@@ -99,12 +99,12 @@
     "# Create a renderapi.connect.Render object\n",
     "# ----------------------------------------\n",
     "render_connect_params = {\n",
-    "    'host': 'sonic.tnw.tudelft.nl',\n",
-    "    'port': 8080,\n",
+    "    'host': 'localhost',\n",
+    "    'port': 8081,\n",
     "    'owner': owner,\n",
     "    'project': project,\n",
     "    'client_scripts': '/home/catmaid/render/render-ws-java-client/src/main/scripts',\n",
-    "    'memGB': '2G'\n",
+    "    'memGB': '2G',\n",
     "}\n",
     "render = renderapi.connect(**render_connect_params)\n",
     "render.make_kwargs()"
