Change CATMAID storage location

--- a/Notebooks/4_FAST-EM-export.ipynb
+++ b/Notebooks/4_FAST-EM-export.ipynb
@@ -90,7 +90,7 @@
     "owner = 'akievits'\n",
     "project = 'prototype_rat_pancreas'\n",
     "dir_project = Path(f'/long_term_storage/{owner}/FAST-EM/{project}/')\n",
-    "dir_catmaid = Path(f'/long_term_storage/{owner}/CATMAID/projects/{project}/')\n",
+    "dir_catmaid = Path(f'/long_term_storage/catmaid_projects/{owner}/CATMAID/projects/{project}/')\n",
     "\n",
     "# Create a renderapi.connect.Render object\n",
     "# ----------------------------------------\n",
